--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<html>
+ <head>
+    <title>
+      Somewhere far far away
+   </title>
+ </head>
+      <boby>
+        <h1>Ctf(Capture the flag)</h1>
+        <p>Welcome to capture the flag!</p>
+        <p>You will find a clue that leads to the flag!</p>
+        <p>Good Luck!</p>
+        <h3>Clues</h3>
+       
+        <h3>Hint</h3>
+        </body>
+</html>
