--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <p>Welcome to capture the flag!</p>
         <p>You will find a clue that leads to the flag!</p>
         <p>Good Luck!</p>
-        <h3>Clues</h3>
+        <p>My github: <a href="https://github.com/ObiWonBinobi77">It's a trap!</a>
        
         <h3>Hint</h3>
         </body>
