--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
  <head>
     <title>
@@ -6,7 +7,7 @@
  </head>
       <boby>
         <h1>Ctf(Capture the flag)</h1>
-        <p>Welcome to capture the flag!</p>
+        <p>Welcome to capture the flag!</p> for gaming
         <p>You will find a clue that leads to the flag!</p>
         <p>Good Luck!</p>
         <p>My github: <a href="https://github.com/ObiWonBinobi77">It's a trap!</a>
