--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       Somewhere far far away
    </title>
  </head>
-      <boby>
+      <body>
         <h1>Ctf(Capture the flag)</h1>
         <p>Welcome to capture the flag!</p> for gaming
         <p>You will find a clue that leads to the flag!</p>
