--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
  </head>
       <body>
         <h1>Ctf(Capture the flag)</h1>
-        <p>Welcome to capture the flag!</p> for gaming
-        <p>You will find a clue that leads to the flag!</p>
+        <p>Welcome to capture the flag!</p>
+        <p>You will try to find a clue that leads to the flag!</p>
         <p>Good Luck!</p>
         <p>My github: <a href="https://github.com/ObiWonBinobi77">It's a trap!</a>
        
         <h3>Hint</h3>
+      
         </body>
 </html>
