--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
     <title>
-      Somewhere far far away
+      Somewhere far far away               {yay_you_found_it}
    </title>
  </head>
       <body>
@@ -13,6 +13,6 @@
         <p>My github: <a href="https://github.com/ObiWonBinobi77">It's a trap!</a>
        
         <h3>Hint</h3>
-      
+       <p>a little green guy</p>
         </body>
 </html>
