--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
     <title>
-      Somewhere far far away               {yay_you_found_it}
+      Somewhere far far away              flag{yay_you_found_it}
    </title>
  </head>
       <body>
