--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>My github: <a href="https://github.com/ObiWonBinobi77">It's a trap!</a>
        <p>scrool down to see the hint</p>
        
-       <img src"itsatrap.jpg" alt="itsatrap" />
+       <img src"itsatrap.jpg" alt="itsatrap" /><!---->
   
        <h3>Hint</h3>
        <p>a little green guy</p>
