--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
     <title>
-      Somewhere far far away                                                                                                    flag{deathstar}.
+      In a galaxy, far far away lies the flag                                                                                                    flag{your_mum}.
    </title>
  </head>
       <body>
