--- a/Index2.html
+++ b/Index2.html
@@ -1,2 +1,11 @@
 <!Doctype html>
+<html>
+  <head>
+    <title>
+      In a second galaxy more further
+    </title>
+  </head>
+  <body>
+    <h1>In a galaxy <h1>
+  </body>
 </html>
