--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
    </title>
  </head>
       <body>
-        <h1>Ctf(Capture the flag{123456789})</h1>
-        <p>Welcome to capture the flag{it's_a_trap}!</p>
-        <p>You will try to find a clue that leads to the flag{jarjar_binks}!</p>
-        <p>Good Luck on finding the flag{your_mom_is_a_trap}!</p>
+        <h1>Ctf(Capture the flag{123456789)</h1>
+        <p>Welcome to capture the flag{it's_A_trap}!</p>
+        <p>You will try to find a clue that leads to the flag!</p>
+        <p>Good Luck on finding the flag{your_mom_is_a trap}}!</p>
         <p>My github: <a href="https://github.com/ObiWonBinobi77">It's a trap!</a>
        <p>scrool down to see the hint</p>
        
