--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Ctf(Capture the flag{123456789)</h1>
         <p>Welcome to capture the flag{it's_A_trap}!</p>
         <p>You will try to find a clue that leads to the flag!</p>
-        <p>Good Luck on finding the flag{your_mom_is_a trap}}!</p>
+        <p>Good Luck on finding the flag{your_mom is_a trap}}!</p>
         <p>My github: <a href="https://github.com/ObiWonBinobi77">It's a trap!</a>
     
        
