--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <p>You will try to find a clue that leads to the flag!</p>
         <p>Good Luck on finding the flag{your_mom is_a trap}}!</p>
         <p>My github: <a href="https://github.com/ObiWonBinobi77">It's a trap!</a>
+       <p>p.s. you will never find it</p>
     
        
        <img src="itsatrap.jpg" alt="itsatrap" />
