--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    </title>
  </head>
       <body>
-        <h1>Ctf(Capture the flag{123456789)</h1>
+        <h1>Ctf(Capture the flag{123456789}</h1>
         <p>Welcome to capture the flag{it's_A_trap}!</p>
         <p>You will try to find a clue that leads to the flag!</p>
         <p>Good Luck on finding the flag{your_mom is_a trap}}!</p>
